# category_classification_semantic

./: .env.example  .gitignore  README.md  attrs.json  docker-compose.yml  extract_hs_codes.py  extract_hs_codes_gemini.py  pyproject.toml  test.py  weaviate_index.py  weaviate_search.py  weaviate_utils.py  web_frontend.py
.cache/attrs_augment/: augmented_attribute_types.jsonl  (+2 more)
docker/: reranker-transformers.Dockerfile  text2vec-transformers.Dockerfile
outputs/: _gemini_prompt_test_pages.jsonl  _gemini_prompt_test_rows.csv  _gemini_resume_ctx_pages.jsonl  _gemini_resume_ctx_rows.csv  _gemini_smoke_0207_pages.jsonl  _gemini_smoke_0207_pages2.jsonl  _gemini_smoke_0207_pages3.jsonl  _gemini_smoke_0207_pages4.jsonl  _gemini_smoke_0207_pages_full.jsonl  _gemini_smoke_0207_rows2.csv  _gemini_smoke_0207_rows3.csv  _gemini_smoke_0207_rows4.csv  _gemini_smoke_0207_rows_full.csv  _gemini_smoke_ch7_pages.jsonl  _gemini_smoke_ch7_pages4.jsonl  _gemini_smoke_ch7_pages5.jsonl  _gemini_smoke_ch7_pages6.jsonl  _gemini_smoke_ch7_pages7.jsonl  _gemini_smoke_ch7_rows4.csv  _gemini_smoke_ch7_rows5.csv  _gemini_smoke_ch7_rows6.csv  _gemini_smoke_ch7_rows7.csv  _llm_ch7_pages.jsonl  _llm_ch7_pages2.jsonl  _llm_ch7_rows.csv  _llm_ch7_rows2.csv  _llm_target_0207_pages.jsonl  _smoke_0207_rows2.csv  _smoke_ch7_pages.jsonl  _smoke_ch7_pages2.jsonl  _smoke_ch7_pages3.jsonl  _smoke_ch7_pages4.jsonl  _smoke_ch7_pages5.jsonl  _smoke_ch7_pages6.jsonl  _smoke_ch7_pages8.jsonl  _smoke_ch7_rows.csv  _smoke_ch7_rows2.csv  _smoke_ch7_rows3.csv  _smoke_ch7_rows4.csv  _smoke_ch7_rows5.csv  (+9 more)
(+8 files in other folders)
